--- a/experience/index.html
+++ b/experience/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
 
-    <title>Experience | Portfolio Jigar Sable</title>
+    <title>Experience | Portfolio Ankit Mehta</title>
 </head>
 <body oncontextmenu="return false">
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Ankit</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -45,47 +45,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Self Employed</h2>
+          <h2>The Knowledge Academy</h2>
         </div>
         <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>DevIncept (Top Contributor)</h2>
-          </div>
-          <div class="desc">
-              <h3>DCP 2021 Contributor | Open Source Program</h3>
-              <p>July 2021 - October 2021</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>LetsGrowMore Summer of Code</h2>
-          </div>
-          <div class="desc">
-              <h3>LGM-SOC'21 Participant | Open Source Program</h3>
-              <p>June 2021 - August 2021</p>
-          </div>
-        </div>
-      </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Technical Research Analyst</h3>
+            <p>July 2023 – Present (2.5+ years)</p>
         </div>
       </div>
     </div>
@@ -93,11 +57,11 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>JM Financial Ltd</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3>Consultant | Full-time</h3>
+            <p>Jan 2023 - Jul 2023</p>
         </div>
       </div>
     </div>
@@ -105,11 +69,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>EPAM Systems</h2>
         </div>
         <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <h3>Frontend Developer | Full-time</h3>
+            <p>Oct 2022 - Apr 2023</p>
         </div>
       </div>
     </div>
@@ -117,38 +81,14 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Frshr Technologies</h2>
+          <h2>Upskillz</h2>
         </div>
         <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
+            <h3>Business Associate | Full-time</h3>
+            <p>Aug 2022 - Dec 2022</p>
         </div>
       </div>
     </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Hacktoberfest 2020</h2>
-          </div>
-          <div class="desc">
-              <h3>Contributor | Open Source Program</h3>
-              <p>October 2020 - November 2020</p>
-          </div>
-        </div>
-      </div>
 
   </div>
 
@@ -169,7 +109,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Ankit's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -185,21 +125,21 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>+91 9058060755</p>
+          <p> <i class="fas fa-envelope"></i>mehtaankit318@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Bengaluru, India-53002</p>
           <div class="share">
 
-            <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-            <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/kitmehta/" class="fab fa-linkedin" target="_blank"></a>
+            <a href="https://github.com/kitmehta" class="fab fa-github" target="_blank"></a>
+            <a href="mailto:mehtaankit318@gmail.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="https://x.com/BeingAnkitMehta" class="fab fa-twitter" target="_blank"></a>
+            <a href="https://t.me/ankitmehta" class="fab fa-telegram-plane" target="_blank"></a>
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/kitmehta"> Ankit Mehta</a></h1>
 
 </section>
 <!-- footer section ends -->
